fixed bug where message pulsating for too long shows up as background colour isn't changed.

--- a/css/clock.less
+++ b/css/clock.less
@@ -4,7 +4,7 @@ html{
       -ms-transition: rotateX(0deg);
        -o-transition: rotateX(0deg);
           transition: rotateX(0deg);
-    height:768px;
+ //   height:768px;
     }
 body{
 margin:0px;
