--- a/css/mobileClient.less
+++ b/css/mobileClient.less
@@ -6,13 +6,13 @@ width:320px;
 margin: -20px auto 0px auto;
 font-family:Helvetica, Arial, sans-serif;
     .ui-page{
-        height:480px;
+      //  height:480px;
         }
     .container{
         overflow:hidden;
             float:left;
             width:320px;
-            height:480px;
+           // height:480px;
         .containeything{
             float:left;
             margin:20px 25px 25px 25px;
